compiler/tests/ar/errors/pure_impure_call_ar.salam
// لغة: العربية
// EXPECT: E012
دالة طابع(x صحيح٣٢) صحيح٣٢:
    اطبع(x)
    أرجع x
نهاية

نقي دالة ضعف(x صحيح٣٢) صحيح٣٢:
    أرجع طابع(x) * 2
نهاية

دالة الرئيسية:
    اطبع(ضعف(3))
نهاية
